@@ -2,7 +2,7 @@ package com.ddudu.config;
 
 import com.ddudu.auth.domain.authority.Authority;
 import com.ddudu.auth.jwt.converter.JwtConverter;
-import java.util.List;
+import java.util.Collections;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
@@ -19,7 +19,8 @@ import org.springframework.security.web.SecurityFilterChain;
 public class WebSecurityConfig {
 
   @Bean
-  public SecurityFilterChain apiFilterChain(HttpSecurity http, JwtConverter jwtConverter) throws Exception {
+  public SecurityFilterChain restFilterChain(HttpSecurity http, JwtConverter jwtConverter)
+      throws Exception {
     return http
         .securityMatchers(matcher -> matcher
             .requestMatchers("/api/**"))
@@ -32,7 +33,7 @@ public class WebSecurityConfig {
         .httpBasic(AbstractHttpConfigurer::disable)
         .csrf(AbstractHttpConfigurer::disable)
         .anonymous(anonymous -> anonymous
-            .authorities(List.of(Authority.GUEST)))
+            .authorities(Collections.singletonList(Authority.GUEST)))
         .oauth2ResourceServer(oauth2 -> oauth2
             .jwt(jwt -> jwt
                 .jwtAuthenticationConverter(jwtConverter)))
